[package]
name = "pingora-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
pingora-runtime = "0.1.0"
daemonize = "0.5.0"
nix = "0.28.0"
log = "0.4.21"
tokio = { version = "1", features = ["sync", "signal", "time"] }
pingora-timeout = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
libc = "0.2.70"
serde_yaml = "0.8"
pingora-error = "0.1.0"


[dev-dependencies]
env_logger = "0.9"
