[package]
name = "pingora-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora-runtime = "0.3.0"
pingora-timeout = "0.3.0"
pingora-error = "0.3.0"
tokio = { version = "1", features = ["sync", "signal", "time"] }
async-trait = "0.1.77"
nix = "0.28.0"
daemonize = "0.5.0"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libc = "0.2.70"
clap = { version = "3.2.25", features = ["derive"] }


[dev-dependencies]
env_logger = "0.9"
