[package]
name = "yapf"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yapf"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.77"
http = "1.1.0"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-rustls = { version = "0.26.0", features = ["http1"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["client", "tokio"] }
rand = "0.8.4"
num-integer = "0.1.46"
rand_distr = "0.4.3"
anyhow = "1.0.40"
reqwest = { version = "0.11.3", default_features = false, features = [
    "default-tls",
    "trust-dns",
] }
tokio = { version = "1.0.1", features = ["sync", "time"] }
arc-swap = "1.7.0"
pingora-server = { path = "../pingora-server", optional = true }
pingora-core = { version = "0.1.0", optional = true }

[dev-dependencies]
wiremock = "0.6.0"

[features]
pingora = ["dep:pingora-server"]
pingora-core = ["dep:pingora-core"]
