[package]
name = "yapf"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yapf"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.81"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-rustls = { version = "0.27.2", features = ["http1"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["client", "tokio"] }
rand = "0.8.4"
num-integer = "0.1.46"
rand_distr = "0.4.3"
anyhow = "1.0.40"
reqwest = { version = "0.12.5", default_features = false, features = [
    "default-tls",
    "trust-dns",
] }
tokio = { version = "1.39.2", features = ["sync", "time"] }
arc-swap = "1.7.0"
pingora-server = { path = "../pingora-server", optional = true }
pingora-runtime = { version = "0.3.0", optional = true }
pingora-core = { version = "0.3.0", optional = true }

[dev-dependencies]
wiremock = "0.6.0"

[features]
pingora = ["dep:pingora-server", "dep:pingora-runtime"]
pingora-core = ["dep:pingora-core"]
default = ["pingora"]
